# calc.nvim

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  README.md  pyproject.toml
doc/: calc.nvim.txt  vimcalc.txt
lua/: build.lua  calc_nvim.lua
lua/calc_nvim/: health.lua
lua/vim-calc/: init.lua  vim-calc.lua
plugin/: calc.nvim.vim  vim-calc.vim
python3/vimcalc/: vimcalc.py
rplugin/python3/: calc_nvim.py  utils.py
rplugin/python3/test/: test_calc_nvim.py  test_utils.py
