[project]
name = "calc.nvim"
version = "0.2.0"

[tool.black]
include = '\.pyi?$'
exclude = '''
/(
    \.git
    build
    install
    log
)/
'''

[tool.ruff]
ignore = [ "D100", "D107", "D104", "COM812" ]
line-length = 88
select = [
    # pycodestyle
    "E",
    "W",
    # pyflakes
    "F",
    # isort
    "I",
    # flake8 quotes
    "Q",
    # flake8 commas
    "COM",
    # flake8 comprehensions
    "C4",
    # pydocstyle, uncomment
    "D",
    # pyupgrade
    "UP",
]

[tool.ruff.pydocstyle]
convention = "google"

[tool.ruff.per-file-ignores]
"**/test/*.py" = ["D103"]

[tool.commitizen]
tag_format = "v$major.$minor.$patch$prerelease"
version_files = [
    "VERSION",
    "pyproject.toml:version",
]
bump_message = "bump: version $current_version -> $new_version"
name = "cz_conventional_commits"
version_scheme = "pep440"
version_provider = "pep621"
update_changelog_on_bump = true
major_version_zero = true
